fixed overflow errors in video players as well as responsive issues

--- a/src/styles/pages_styles/module_styles/Mod1.css
+++ b/src/styles/pages_styles/module_styles/Mod1.css
@@ -1,5 +1,5 @@
 .card-mod1 {
-  position: relative;
+  /* position: relative; */
   width: 75vw;
   height: 75vh;
   background: #fff;
@@ -11,6 +11,14 @@
   padding: 10px;
   box-shadow: 0 0 1px 0 rgba(24, 94, 224, 0.15),
     0 6px 12px 0 rgba(24, 94, 224, 0.15);
+}
+
+.mod1-back {
+  position: relative;
+}
+
+.mod1 {
+  position: relative;
 }
 
 .circles,
@@ -84,9 +92,10 @@
 
 .video-player {
   position: absolute;
-  top: 55%;
+  top: 20%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  /* transform: translate(-50%, -50%); */
+  transform: translateX(-50%);
   z-index: 1;
   /* color: white; */
   font-size: 24px;
@@ -95,15 +104,21 @@
   width: 72vw;
   /* height: 35vh; */
   display: flex;
+  /* flex-direction: column; */
+  /* align-items: center; */
   justify-content: space-around;
+  max-height: 100%;
+  overflow: auto;
+  /* overflow: scroll; */
 }
 
 .video-player .players {
   margin-left: 20px;
+  border: 3px solid #73ad21;
 }
 
 .video {
-  /* border: 3px solid #73ad21; */
+  border: 3px solid #73ad21;
   width: 100%;
   /* height: 100%; */
   overflow: scroll;
@@ -303,3 +318,12 @@
   height: 100%;
   background: linear-gradient(135deg, #8cdedc 0%, #e7bbe3 100%);
 } */
+@media (max-width: 900px) {
+  .video-player {
+    flex-direction: column;
+    align-items: center;
+  }
+  .video {
+    height: 500px;
+  }
+}
